Fixed issue where image withing finish button on bottom bar was far too small |10|

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -336,8 +336,9 @@ textarea
 }
 #bar_finish img
 {
-	height: 17px;
-	display: inline-block;
+	height: 22px;
+	margin-left: 45px;
+	display: table;
 	padding: 0px;
 }
 #first
